FIX: Keep bg of mobile view white even in dark mode

--- a/src/extensions/default/bramble/stylesheets/style.css
+++ b/src/extensions/default/bramble/stylesheets/style.css
@@ -29,6 +29,10 @@
     background-image: url("../lib/appbar.fullscreen.box.svg");
 }
 
+#second-pane {
+    background: white !important;
+}
+
 .second-pane-scroll {
     overflow: scroll !important;
 }
